--- a/css/custom.css
+++ b/css/custom.css
@@ -530,7 +530,7 @@ article blockquote p {
     font-weight: 400;
     line-height: 1.4;
 }   
-article a {
+article p a {
 	color: #025197;
     background-attachment: scroll;
     background-image: linear-gradient(to top,rgba(255,204,0,0.4) 0,rgba(255,204,0,0.4) 0.5em,transparent 0.5em,transparent 110%),linear-gradient(to top,rgba(255,204,0,0.4) 0,rgba(255,204,0,0.4) 2px,transparent 2px,transparent 100%);
@@ -542,7 +542,7 @@ article a {
     text-decoration: none;
     z-index: 1;
 }
-article a:hover {
+article p a:hover {
     background-position: 0 0,1000px 2px;
 } 
 .newsSearcher {
