--- a/css/custom.css
+++ b/css/custom.css
@@ -931,7 +931,7 @@ ul.personResearchList {
 	color: #3b5998;
 }
 .profile-social-tw {
-	color: #1da1f2;
+	color: #000;
 }
 .profile-social-yt {
 	color: #ff0000;
