--- a/css/custom.css
+++ b/css/custom.css
@@ -423,7 +423,7 @@ span.searchresults	{
 	font-weight:300 !important;
 	font-size:18px !important;
 }
-#exLinkIcon { 
+.exLinkIcon { 
   background-image: url('https://healthprofessions.ucf.edu/wp-content/uploads/sites/2/2019/10/exLinkIconGrey.png');
   background-repeat: no-repeat;
   background-position: top right; 
