--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,15 @@ h2 {
 .header-subtitle {
     line-height: 1.5 !important;
 }
+.visually-hidden {
+   clip-path: inset(100%);
+   clip: rect(1px, 1px, 1px, 1px);
+   height: 1px;
+   overflow: hidden;
+   position: absolute;
+   white-space: nowrap;
+   width: 1px;
+}
 /* = USED GLOBALLY 
 -------------------------------------------------------------- */
 .icongrey {
