--- a/css/custom.css
+++ b/css/custom.css
@@ -1068,6 +1068,14 @@ a.em-socialicon {
     font-weight: 700;
     line-height: 1.5;
 }
+.events-section-title {
+	background-color: #fecb2f;
+	padding: 5px 12px;
+	font-size: 15px;
+	display: inline-block;
+    font-weight: 700;
+    line-height: 1.5;
+}
 /* = SUBSCRIBE AND GIFT
 -------------------------------------------------------------- */
 #subscribeGIFT img {
