--- a/css/custom.css
+++ b/css/custom.css
@@ -177,7 +177,8 @@ animation: flash 1s;
 	padding:8px;
 	width: 100%;
 	display: block;
-	text-decoration-color: #fff;
+	text-color: #fff;
+	text-align: center;
 }
 .giveBTN:hover {
 	background-color: #ddd !important;
