--- a/css/custom.css
+++ b/css/custom.css
@@ -181,7 +181,7 @@ animation: flash 1s;
 	text-align: center;
 }
 .giveBTN:hover {
-	background-color: #ddd !important;
+	background-color: #404040 !important;
 }
 /* = Homepage Title
 -------------------------------------------------------------- */
