--- a/css/custom.css
+++ b/css/custom.css
@@ -177,7 +177,8 @@ animation: flash 1s;
 	padding:8px;
 	width: 100%;
 	display: block;
-	text-color: #fff;
+	text-color: #fff !important;
+	text-decoration: none !important;
 	text-align: center;
 }
 .giveBTN:hover {
