--- a/css/custom.css
+++ b/css/custom.css
@@ -166,6 +166,13 @@ animation: flash 1s;
 	margin-right:8px;
 	margin-top:1px;
 }
+#footerGIVE {
+    background: #ffcc00;
+	padding: 40px 0px 40px 0px;
+}
+#footerGIVE h2 {
+    margin-bottom:0px;
+}
 .giveBTN {
 	background-color:#000;
 	border-radius: 5px;
