--- a/css/custom.css
+++ b/css/custom.css
@@ -168,7 +168,7 @@ animation: flash 1s;
 }
 #footerGIVE {
     background: #ffcc00;
-	padding: 40px 0px 40px 0px;
+	padding: 30px 0px;
 }
 #footerGIVE h2 {
     margin-bottom:0px;
