--- a/css/custom.css
+++ b/css/custom.css
@@ -173,6 +173,7 @@ animation: flash 1s;
 #footerGIVE h2 {
     margin-bottom:0px;
 	font-size:26px;
+	font-weight: 800;
 }
 .giveBTN {
 	background-color:#000;
